Fixed header size on mobile landscape orientation

--- a/css/style.css
+++ b/css/style.css
@@ -400,6 +400,12 @@ em {
         z-index: 99;
     }
 
+    @media (orientation: landscape) {
+        .navigation-bar {
+            height: fit-content;
+        }
+    }
+
     .page-title {
         border: var(--border-width) solid var(--border-color);
         font-family: 'Didact Gothic', sans-serif;
